...
  'RUNG','RUNS','RUNT','RUSE','RUSH','RUST','RUTS','RYES','SACK','SACS',
  'SAFE','SAGA','SAGE','SAGS','SAID','SAIL','SAKE','SALE','SALT','SAME',
  'SAND','SANE','SANG','SANK','SAPS','SARI','SASH','SASS','SAVE','SCAB',
  'SCAM','SCAN','SCAR','SCAT','SEAL','SEAM','SEAT','SECT','SEED','SEEK',
  'SEEM','SEEN','SEEP','SEER','SEES','SELF','SELL','SEMI','SEND','SENT',
  'SERA','SETS','SEWN','SHAG','SHAM','SHAW','SHED','SHIM','SHIN','SHIP',
  'SHIV','SHOD','SHOE','SHOO','SHOP','SHOT','SHOW','SHUN','SHUT',
  'SICK','SIDE','SIFT','SIGH','SIGN','SILK','SILL','SILO','SILT','SING',
  'SINK','SINS','SIPS','SIRE','SITE','SITS','SIZE','SKID','SKIM','SKIN',
  'SKIP','SLAB','SLAG','SLAM','SLAP','SLED','SLEW','SLID','SLIM','SLIP',
  'SLIT','SLOT','SLOW','SLUG','SLUM','SMOG','SNAG','SNAP','SNIP','SNIT',
  'SNOB','SNOT','SNOW','SNUB','SNUG','SOAK','SOAP','SOAR','SOBS','SOCK',
  'SODA','SODS','SOFT','SOIL','SOLD','SOLE','SOLS','SOMA','SOME','SONG',
...
